add_subdirectory(ArithAddfOp)
add_subdirectory(ArithDivfOp)
add_subdirectory(ArithMulfOp)
add_subdirectory(ArithNegfOp)
add_subdirectory(ArithSubfOp)
add_subdirectory(MathFpowOp)
add_subdirectory(MathRsqrtOp)
add_subdirectory(DepthwiseConv2DNhwcHwcOp)
add_subdirectory(Conv2DNhwcHwcfOp)
add_subdirectory(Conv2DNchwFchwOp)
add_subdirectory(PoolingNhwcSumOp)
add_subdirectory(MatMulOp)
add_subdirectory(BatchMatMulOp)
add_subdirectory(MathExpOp)
add_subdirectory(ReduceAddfOp)
add_subdirectory(ReduceMaxfOp)
add_subdirectory(SoftmaxExpSumDivOp)
add_subdirectory(Conv2DNhwcFhwcOp)

if (CROSS_COMPILE_RVV)
add_subdirectory(Conv2DNhwcFhwcInt32Op)
add_subdirectory(BatchMatMulInt32Op)
add_subdirectory(MatMulInt32Op)
endif()
